Fix bullet overflow> #2631
Fix for changes suggested in #2631

--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -2621,9 +2621,10 @@ br.big {
 }
 
 .devprojectlist{
-    overflow:hidden;
+    overflow:auto;
     -webkit-transition:height 400ms ease-out;
     transition:height 400ms ease-out;
+    list-style-position:inside;
 }
 .devprojectlist li:nth-child(1n+4){
     display:none;
